--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -70,7 +70,7 @@
                 <style id="style1066"/>
                 <g id="background">
                     <rect id="background-fill" x="-6.3949e-14" y="-4.5131e-14" width="640" height="1020"
-                          style="fill-opacity:.43922;fill:#8c8cc0;stroke-linecap:round;stroke-linejoin:round;stroke-width:88.185"/>
+                          style="fill-opacity:.43922;fill:#3f3f4f;stroke-linecap:round;stroke-linejoin:round;stroke-width:88.185"/>
                 </g>
                 <g id="buttons">
                     <foreignObject id="LSK1-BUTTON" x="16.50" y="86" width="28.5" height="50">
@@ -110,91 +110,91 @@
                         <div style="background-color:rgba(114,109,114,0);border-bottom-color:#696470;border-color:#696470;border-left-color:#716674;border-right-color:#767078;border-style:outset;border-top-color:#696470;border-width:3px;height:47px;"></div>
                     </foreignObject>
                     <rect id="LSK1-BORDER" class="lsk-btn" x="16.25" y="85.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_LSK_0"/>
                     <rect id="LSK2-BORDER" class="lsk-btn" x="16.25" y="146.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_LSK_1"/>
                     <rect id="LSK3-BORDER" class="lsk-btn" x="16.25" y="207.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_LSK_2"/>
                     <rect id="LSK4-BORDER" class="lsk-btn" x="16.25" y="268.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_LSK_3"/>
                     <rect id="LSK5-BORDER" class="lsk-btn" x="16.25" y="329.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_LSK_4"/>
                     <rect id="LSK6-BORDER" class="lsk-btn" x="16.25" y="390.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_LSK_5"/>
                     <rect id="RSK1-BORDER" class="rsk-btn" x="594.25" y="85.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.4999;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.4999;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_RSK_0"/>
                     <rect id="RSK2-BORDER" class="rsk-btn" x="594.25" y="146.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_RSK_1"/>
                     <rect id="RSK3-BORDER" class="rsk-btn" x="594.25" y="207.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_RSK_2"/>
                     <rect id="RSK4-BORDER" class="rsk-btn" x="594.25" y="268.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_RSK_3"/>
                     <rect id="RSK5-BORDER" class="rsk-btn" x="594.25" y="329.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_RSK_4"/>
                     <rect id="RSK6-BORDER" class="rsk-btn" x="594.25" y="390.75" width="29.5" height="47.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_TRIGGER_RSK_5"/>
                     <rect id="MK1" class="mk-btn" x="11.25" y="486.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_INIT"/>
                     <rect id="MK2" class="mk-btn" x="89.25" y="486.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_RTE"/>
                     <rect id="MK3" class="mk-btn" x="167.25" y="486.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_DEPARR"/>
                     <rect id="MK4" class="mk-btn" x="245.25" y="486.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_ALTN"/>
                     <rect id="MK5" class="mk-btn" x="323.25" y="486.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_VNAV"/>
                     <rect id="MK6" class="mk-btn" x="11.25" y="538.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_FIX"/>
                     <rect id="MK7" class="mk-btn" x="89.25" y="538.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_LEGS"/>
                     <rect id="MK8" class="mk-btn" x="167.25" y="538.28" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_HOLD"/>
                     <rect id="MK9" class="mk-btn" x="245.25" y="538.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_FMCCOMM"/>
                     <rect id="MK10" class="mk-btn" x="323.25" y="538.28" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_PROG"/>
                     <rect id="MK11" class="mk-btn" x="11.25" y="590.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_NAVRAD"/>
                     <rect id="MK12" class="mk-btn" x="89.25" y="590.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_OFST"/>
                     <rect id="MK13" class="mk-btn" x="167.25" y="590.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_RTA"/>
                     <rect id="MK14" class="mk-btn" x="245.25" y="590.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_HEAVY"/>
                     <rect id="MK15" class="mk-btn" x="474.34" y="590.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_PREVPAGE"/>
                     <rect id="MK16" class="mk-btn" x="550" y="590.25" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"
                           data-event="H:AS01B_FMC_1_BTN_NEXTPAGE"/>
                     <rect id="MK17" class="mk-btn" x="553.25" y="486.26" width="75.5" height="49.5"
-                          style="fill-opacity:.56471;fill:#726d72;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"/>
+                          style="fill-opacity:.56471;fill:#6a6a6e;stroke-linecap:round;stroke-linejoin:round;stroke-width:2.5;stroke:#000"/>
                     <text id="MK1-1-TEXT" class="remove-pointers" x="48.549316" y="508.72296"
                           style="fill:#ffffff;font-family:Consolas;font-size:26px;font-variation-settings:'wdth' 100, 'wght' 400;letter-spacing:-.5px;line-height:0.75;stroke-width:.5;text-align:center;text-anchor:middle"
                           xml:space="default">
