scratchpad uses DIV instead of INPUT (focus preparation)

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -838,11 +838,11 @@
                     </foreignobject>
                 </g>
                 <g id="layer1">
-                    <rect id="inOut-line" x="92.321" y="438.65" width="452.18" height="39.624"
+                    <rect id="inOut-line" class="attach-pointers" x="92.321" y="438.65" width="452.18" height="39.624"
                           style="stroke-linecap:round;stroke-linejoin:round;stroke-width:2;stroke:#65697b"/>
                     <foreignobject x="110" y="443.65" width="430" height="28">
-                        <input id="inOut-line-html"
-                               style="background-color:black;border:0;color:white;font-size:28px;font-weight:bold;height:28px;text-transform:uppercase;width:430px"/>
+                        <div id="inOut-line-html" class="remove-pointers"
+                             style="background-color:transparent;border:0;color:white;font-size:28px;font-weight:bold;height:28px;text-transform:uppercase;width:430px"></div>
                     </foreignobject>
                 </g>
             </svg>
